--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ body {
 
 main {
     margin: auto;
-    height: 98vh;
+    height: 100vh;
     position: relative;
 }
 
@@ -36,7 +36,8 @@ section {
     transform: translate(-50%, -50%);
     background-color: white;
     border-radius: 20px;
-    height: 520px;
+    height: 500px;
+    width: 250px;
 }
 
 section div {
@@ -70,28 +71,63 @@ div p#principal {
 }
 
 div input {
-    width: 200px;
-    height: 37px;
-    border-radius: 5px;
+    height: 38px;
+    border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.432);
     font-size: 0.9em;
+}
+
+div#login, div#senha, input {
+    margin-bottom: 5px;
 }
 
 div#login {
     display: inline-block;
     background-color: #5f2c82;
-
+    width: 90%;
+    border-radius: 10px;
+    height: 45px;
 }
 
-i {
+span#usuario {
+    font-size: 2em;
+    color: white;
+    transform: translate(-10%, 20%);
+}
+
+input#iemail {
+    transform: translate(0%, -12%);
+    width: 80%;
+    background-color: #98e7e5d5;
+    border-radius: 10px;
+}
+
+div#senha {
+    display: inline-block;
     background-color: #5f2c82;
-    padding-left: 15px;
+    width: 90%;
+    border-radius: 10px;
+    height: 45px;
+}
+
+span#key {
+    font-size: 2em;
+    color: white;
+    transform: translate(-10%, 20%);
+}
+
+input#isenha {
+    transform: translate(0%, -12%);
+    width: 80%;
+    background-color: #98e7e5d5;
+    border-radius: 10px;
 }
 
 input#entrar {
     color: white;
     background-color: #61c4c0;
     border:1px solid #2e5e5c;
+    width: 90%;
 }
 
 input#entrar:hover {
@@ -103,6 +139,7 @@ input#old-password {
     background-color: white;
     color: #2e5e5c;
     border: 1px solid #5cb9b5;
+    width: 90%;
 }
 
 input#old-password:hover {
