--- a/estilos/tablet.css
+++ b/estilos/tablet.css
@@ -13,4 +13,15 @@ body {
 
 section {
     width: 80vw;
+    height: 280px;
+}
+
+div#imagem {
+   
+    background-position-x: left;
+   background-size: contain;
+}
+
+section div {
+    text-align: right;
 }
