--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,8 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 :root {
@@ -19,8 +20,10 @@
     --cor02: #4fa09d;
 }
 
-body {
+body, html {
     background-color: var(--cor01);
+    height: 100vh;
+    width: 100vw;
 }
 
 main {
@@ -38,20 +41,24 @@ section {
     border-radius: 20px;
     height: 500px;
     width: 250px;
-    box-shadow: 1px 1px 3px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
 }
 
 section div {
     text-align: center;
 }
 
-div#imagem {
+section > div#imagem {
     height: 180px;
     background-image: url(../imagens/pexels-daniel-alvarado-2419375.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     border-radius: 20px 20px 0px 0px;
+}
+
+section > div#imagem, section > div#formulario {
+    display: block;
 }
 
 h1 {
@@ -69,6 +76,7 @@ p {
 div p#principal {
     font-weight: normal;
     font-size: 0.8em;
+    padding-bottom: 25px;
 }
 
 div input {
