--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,6 +42,9 @@ section {
     height: 500px;
     width: 250px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+
+    transition: width 0.3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section div {
