--- a/estilos/media-desktop.css
+++ b/estilos/media-desktop.css
@@ -12,12 +12,13 @@ section {
 }
 
 section > div#imagem {
-    float: left;
+    float: right;
     width: 50%;
     height: 100%;
+    border-radius: 0px 20px 20px 0px;
 }
 
 section > div#formulario {
-    float: right;
+    float: left;
     width: 50%;
 }
