att imagem das demais versões

--- a/estilos/media-tablet.css
+++ b/estilos/media-tablet.css
@@ -21,6 +21,7 @@ section > div#imagem {
    width: 30%;
    height: 100%;
    border-radius: 20px 0px 0px 20px;
+   background-position: center center;
 }
 
 section > div#formulario {
