--- a/estilos/media-desktop.css
+++ b/estilos/media-desktop.css
@@ -16,6 +16,7 @@ section > div#imagem {
     width: 50%;
     height: 100%;
     border-radius: 0px 20px 20px 0px;
+    background-position: right bottom;
 }
 
 section > div#formulario {
