--- a/estilos/media-tablet.css
+++ b/estilos/media-tablet.css
@@ -8,7 +8,7 @@
 */
 
 body {
-    background-image: linear-gradient(to bottom, #5f2c82, #49a09d);
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.233),rgba(255, 166, 0, 0.384));
 }
 
 section {
